INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}) # for config.h

INCLUDE_DIRECTORIES(${GLIB_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${MYSQL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EVENT_INCLUDE_DIRS})

LINK_DIRECTORIES(${LUA_LIBRARY_DIRS})
LINK_DIRECTORIES(${GLIB_LIBRARY_DIRS})

SET(_plugin_name debug)
ADD_LIBRARY(${_plugin_name} SHARED "${_plugin_name}-plugin.c")
TARGET_LINK_LIBRARIES(${_plugin_name} mysql-chassis-proxy) 
CHASSIS_PLUGIN_INSTALL(${_plugin_name})

