EXTRA_DIST = \
		bug_30867.lua \
		bug_30867.options \
		bug_30867.test \
		bug_35669-test.lua \
		bug_35669-mock.lua \
		bug_35669.options \
		bug_35669.test \
		bug_35729-test.lua \
		bug_35729-mock.lua \
		bug_35729.options \
		bug_35729.test \
		bug_45167-test.lua \
		bug_45167-mock.lua \
		bug_45167.options \
		bug_45167.test \
		bug_41991-test.lua \
		bug_41991-mock.lua \
		bug_41991.test \
		bug_41991.options \
		bug_46141-test.lua \
		bug_46141-mock.lua \
		bug_46141.test \
		bug_46141.options \
		bug_43078-test.lua \
		bug_43078-mock.lua \
		bug_43078.test \
		bug_43078.options \
		bug_55459-test.lua \
		bug_55459-mock.lua \
		bug_55459.test \
		bug_55459.options \
		bug_61998.test \
		bug_61998.lua \
		chain1.options \
		chain1.test \
		chain1a.lua \
		chain1b.lua \
		change_user.lua \
		change_user.test \
		client_address-test.lua \
		client_address-mock.lua \
		client_address.test \
		client_address.options \
		constants-test.lua \
		constants-mock.lua \
		constants.test \
		constants.options \
		default.options \
		error_struct.lua \
		error_struct.test \
		failover-test.lua \
		failover-mock.lua \
		failover.test \
		failover.options \
		ignore-resultset-test.lua \
		ignore-resultset-mock.lua \
		ignore-resultset.options \
		ignore-resultset.test \
		lineno.test \
		lineno.lua \
		lm1.lua \
		lm2.lua \
		lm3.lua \
		load_multi-test.lua \
		load_multi-mock.lua \
		load_multi.options \
		load_multi.test \
		load-data-infile-test.lua \
		load-data-infile-mock.lua \
		load-data-infile.options \
		load-data-infile.test \
		mysql-40.test \
		mysql-40.lua \
		no_backend.lua \
		no_backend.test \
		overlong-test.lua \
		overlong-mock.lua \
		overlong.options \
		overlong.test \
		raw_packets.lua \
		raw_packets.test \
		resultset-test.lua \
		resultset-mock.lua \
		resultset.options \
		resultset.test \
		pooling-test.lua \
		pooling-mock.lua \
		pooling.test \
		pooling.options \
		select_affected_rows.lua \
		select_affected_rows.test \
		select_null.test \
		select_null.lua \
		tokens1.lua \
		tokens1.test \
		tokens2.lua \
		tokens2.test \
		tokens-normalize.lua \
		tokens-normalize.test \
		xtab1-test.lua \
		xtab1-mock.lua \
		xtab1.options \
		xtab1.test \
		xtab2.lua \
		xtab2.test

